fixed view bug on iphone

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -3,7 +3,7 @@ $nav-width: 232px;
 $header-height: 96px;
 
 section {
-    height: 100vh;
+    height: 100dvh;
 }
 
 header {
